refactor: 💡 Some minor code style fixes

--- a/packages/error-overlay/src/components/frame/frame.less
+++ b/packages/error-overlay/src/components/frame/frame.less
@@ -6,7 +6,7 @@
 
   background-color: #334155;
 
-  box-shadow: rgb(0 0 0 / 0) 0 0 0 0, rgb(0 0 0 / 0) 0 0 0 0, rgb(51 65 85 / 0.5) 0 10px 15px -3px, rgb(51 65 85 / 0.5) 0 4px 6px -4px;
+  box-shadow: rgb(51 65 85 / 0.5) 0 10px 15px -3px, rgb(51 65 85 / 0.5) 0 4px 6px -4px;
 
   &__ {
     &code {
@@ -29,14 +29,14 @@
         &highlight {
           border-color: #f43f5e;
 
-          background-color: rgba(244, 63, 94, 0.2);
+          background-color: rgb(244 63 94 / 0.2);
         }
       }
     }
 
     &line-number {
       margin-right: 12px;
-      border-right: 2px solid rgba(71 85 105 / 75);
+      border-right: 2px solid rgb(71 85 105 / 0.75);
 
       padding: 0 12px;
 
