fix: 🐛 Fixed SWC error parser

--- a/packages/error-overlay/src/components/overlay/overlay.less
+++ b/packages/error-overlay/src/components/overlay/overlay.less
@@ -58,7 +58,9 @@
       position: relative;
       z-index: 10;
 
-      margin: 40px auto;
+      margin: 30px auto;
+
+      padding: 10px;
     }
 
     &content {
