refactor: 💡 Devtools fixes, updates and code style

--- a/packages/devtools/src/components/molecule/search/search.less
+++ b/packages/devtools/src/components/molecule/search/search.less
@@ -121,7 +121,7 @@
     --reach-menu-button: 1;
   }
 
-  [data-reach-menu] {
+  [data-reach-menu-popover] {
     z-index: var(--z-index-menu-dropdown);
   }
 
