fix: 🐛 Removed broken rgba style rules and disabled stylelint rule

--- a/packages/devtools/src/components/molecule/search/search.less
+++ b/packages/devtools/src/components/molecule/search/search.less
@@ -11,7 +11,7 @@
 
   background: #fff;
 
-  box-shadow: 0 0 10px rgb(0 0 0 / 0.15);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
 
   .separator {
     margin: 0 6px;
@@ -136,7 +136,7 @@
 
     background: var(--color-white);
 
-    box-shadow: 0 0 10px rgb(0 0 0 / 0.15);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
     outline: none;
 
     hr {
