--- a/packages/devtools/src/assets/less/popup.less
+++ b/packages/devtools/src/assets/less/popup.less
@@ -62,7 +62,7 @@
 
     background: var(--color-white);
 
-    box-shadow: 0 0 5px rgb(0 0 0 / 0.15);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
   }
 
   .popup__header-title {
@@ -157,11 +157,11 @@
   }
 
   .switch [disabled]:not([disabled="false"]) + .switcher:active::before {
-    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.2);
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
   }
 
   .switch [disabled]:not([disabled="false"]) + .switcher::before {
-    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.2);
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
     transition: none;
   }
 }
