--- a/packages/devtools/src/components/atom/modal/modal.less
+++ b/packages/devtools/src/components/atom/modal/modal.less
@@ -26,7 +26,7 @@
   justify-content: center;
   align-items: flex-start;
 
-  background: rgb(0 0 0 / 0.25);
+  background: rgba(0, 0, 0, 0.25);
 
   cursor: pointer;
 
@@ -47,7 +47,7 @@
 
   background: var(--color-white);
 
-  box-shadow: 0 10px 25px rgb(0 0 0 / 0.15);
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
 
   composes: animslidein from "../../../assets/less/animations.less";
 
