--- a/packages/devtools/src/components/atom/modal/modal.module.less
+++ b/packages/devtools/src/components/atom/modal/modal.module.less
@@ -1,4 +1,4 @@
-@import "../../../assets/less/animations";
+@import "../../../assets/less/animations.module.less";
 
 .wrapper {
   position: absolute;
@@ -30,10 +30,10 @@
 
   cursor: pointer;
 
-  composes: animfadein from "../../../assets/less/animations.less";
+  composes: animfadein from "../../../assets/less/animations.module.less";
 
   &--closing {
-    composes: animfadeout from "../../../assets/less/animations.less";
+    composes: animfadeout from "../../../assets/less/animations.module.less";
   }
 }
 
@@ -49,10 +49,10 @@
 
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
 
-  composes: animslidein from "../../../assets/less/animations.less";
+  composes: animslidein from "../../../assets/less/animations.module.less";
 
   &--closing {
-    composes: animslideout from "../../../assets/less/animations.less";
+    composes: animslideout from "../../../assets/less/animations.module.less";
   }
 }
 
