--- a/packages/devtools/src/components/template/options/options.module.less
+++ b/packages/devtools/src/components/template/options/options.module.less
@@ -1,6 +1,6 @@
-@import "~nanoreset";
-@import "../../../assets/less/config";
-@import "../../../assets/less/tooltip";
+@import "nanoreset";
+@import "../../../assets/less/config.module.less";
+@import "../../../assets/less/tooltip.module.less";
 
 :global {
   html,
