--- a/packages/devtools/src/components/template/panel/panel.module.less
+++ b/packages/devtools/src/components/template/panel/panel.module.less
@@ -1,6 +1,6 @@
 @import "~nanoreset";
-@import "../../../assets/less/config.less";
-@import "../../../assets/less/tooltip";
+@import "../../../assets/less/config.module.less";
+@import "../../../assets/less/tooltip.module.less";
 
 :global {
   html,
