style: 💄 less code style fixes

--- a/packages/devtools/src/assets/less/popup.module.less
+++ b/packages/devtools/src/assets/less/popup.module.less
@@ -152,11 +152,11 @@
   }
 
   .switch [disabled]:not([disabled="false"]) + .switcher:active::before {
-    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.2);
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
   }
 
   .switch [disabled]:not([disabled="false"]) + .switcher::before {
-    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.2);
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
     transition: none;
   }
 }
