--- a/packages/error-overlay/src/app.less
+++ b/packages/error-overlay/src/app.less
@@ -12,6 +12,10 @@
   font-family: var(--ima-font-sans);
 }
 
+[data-ima-error-overlay] {
+  -webkit-font-smoothing: auto;
+}
+
 /* These styles are injected to the shadow dom of ima-error-overlay */
 @import "./components/overlay/overlay.less";
 @import "./components/header/header.less";
