--- a/packages/error-overlay/src/components/frame/frameHeader.less
+++ b/packages/error-overlay/src/components/frame/frameHeader.less
@@ -9,7 +9,7 @@
 
   font-family: var(--ima-font-mono);
 
-  box-shadow: rgb(30 41 59 / 0.25) 0 8px 12px;
+  box-shadow: rgba(30, 41, 59, 0.25) 0 8px 12px;
 
   &__ {
     &tab {
