--- a/packages/error-overlay/src/components/overlay/overlay.less
+++ b/packages/error-overlay/src/components/overlay/overlay.less
@@ -49,9 +49,9 @@
       width: 100vw;
       height: 100%;
 
-      background: rgb(0 0 0 / 0.1);
+      background: rgba(60, 60, 60, 0.35);
 
-      backdrop-filter: blur(12px);
+      backdrop-filter: blur(25px);
     }
 
     &foreground {
@@ -75,7 +75,7 @@
 
       background: white;
 
-      box-shadow: rgb(149 157 165 / 0.3) 0 8px 24px;
+      box-shadow: rgba(149, 157, 165, 0.3) 0 8px 24px;
 
       &-- {
         &compile {
