chore: 🤖 Fixed build

--- a/packages/core/polyfill/runner.ejs
+++ b/packages/core/polyfill/runner.ejs
@@ -29,7 +29,7 @@
   root.$IMA.Runner = assign(
     {
       isEsVersion: false,
-      source: #{$Source},
+      source: JSON.parse('#{$Source}'),
       scripts: [],
       loadedScripts: [],
       // es11 env test scripts
