refactor: 💡 $IMA.Runner refactor (#194)
* chore: 🤖 Devtools cleanup, generalized build proccess

* style: 💄 devtools code style to match rest of codebase

* fix: 🐛 Fixed overlay.js static path

* chore: 🤖 updated package-lock

* chore: 🤖 fixed error overlay build

* style: 💄 less code style fixes

* style: 💄 tab-size: 2 defaults for error overlay content

* refactor: 💡 $IMA.Runner refactor proposal

* feat: 🎸 Refactored the way scripts are loaded using IMA.Runner

* refactor: 💡 reverted moduleId names

* refactor: 💡 spa.html template fixes, added documentaiton

* refactor: 💡 Minor tweaks to createScript function

* refactor: 💡 removed window prefix on client-side init script

* refactor: 💡 Moved init script to runner, cleaned spa.html

* refactor: 💡 Added ability to override IMA.Runner parts

* refactor: 💡 Use imaRunner from public/static in ServerRenderer

* feat: 🎸 Initial implementation of embedded runtime runner code

* refactor: 💡 Changed runner code generation to use ejs

* feat: 🎸 Inline runner in SPA.html instead of separate script

* refactor: 💡 Removed html-minimizer and compress for html files

* test: 💍 Test fixes

* fix: 🐛 Fixed error in AMP plugin compilation

* refactor: 💡 Refactored $Source to function generator

* docs: ✏️ Fixed docstring on _getRevivalSettings()

* refactor: 💡 Refactored injection of sources and runner

* chore: 🤖 Fixed build

--- a/packages/create-ima-app/template/app/public/spa.html
+++ b/packages/create-ima-app/template/app/public/spa.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charSet="utf-8"/>
-    <meta httpEquiv="X-UA-Compatible" content="IE=edge"/>
+    <meta charSet="utf-8" />
+    <meta httpEquiv="X-UA-Compatible" content="IE=edge" />
 
-    <meta name="description" content=""/>
-    <meta name="keywords" content=""/>
+    <meta name="description" content="" />
+    <meta name="keywords" content="" />
 
-    <meta property="og:title" content=""/>
-    <meta property="og:description" content=""/>
-    <meta property="og:type" content=""/>
-    <meta property="og:url" content=""/>
-    <meta property="og:image" content=""/>
+    <meta property="og:title" content="" />
+    <meta property="og:description" content="" />
+    <meta property="og:type" content="" />
+    <meta property="og:url" content="" />
+    <meta property="og:image" content="" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link rel="stylesheet" href="/static/css/app.css?version=<%= $Version %>"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    #{$Styles}
+
     <title></title>
 </head>
 <body>
-    <div id="page">
-    </div>
+    <div id="page"></div>
     <div id="revivalSettings">
-        <script type="application/javascript">
+        <script>
             window.$Debug = <%= $Debug %>;
             window.$IMA = window.$IMA || {};
             window.$IMA.Cache = {};
@@ -35,17 +35,8 @@
             window.$IMA.$Path = location.pathname;
             window.$IMA.$Root = "";
             window.$IMA.$LanguagePartPath = "";
+            #{$Runner}
         </script>
-    </div>
-    <div id="scripts">
-        <% if ($Env !== "dev") { %>
-            <script type="application/javascript" src="/static/locale/<%= $Language %>.js?version=<%= $Version %>"></script>
-            <script type="application/javascript" src="/static/js/app.bundle.js?version=<%= $Version %>"></script>
-        <% } else { %>
-            <script type="application/javascript" src="/static/locale/<%= $Language %>.js?version=<%= $Version %>"></script>
-            <script type="application/javascript" src="/static/js/vendors.js?version=<%= $Version %>"></script>
-            <script type="application/javascript" src="/static/js/app.client.js?version=<%= $Version %>"></script>
-        <% } %>
     </div>
 </body>
 </html>
