refactor: 💡 Inject whatwg-fetch diretly in build

--- a/packages/create-ima-app/template/app/page/home/homeView.less
+++ b/packages/create-ima-app/template/app/page/home/homeView.less
@@ -41,4 +41,12 @@
     flex-flow: row wrap;
     justify-content: center;
   }
+
+  .mounted {
+    position: fixed;
+    left: 20px;
+    top: 20px;
+
+    font-size: 2rem;
+  }
 }
