fix: 🐛 Fixed critical bug in compilation of vendors

--- a/packages/error-overlay/src/components/header/header.less
+++ b/packages/error-overlay/src/components/header/header.less
@@ -11,8 +11,11 @@
 
       font-size: 12px;
       font-weight: 500;
+      color: #e2e8f0;
 
       text-transform: capitalize;
+
+      background-color: #334155;
 
       &-- {
         &compile {
@@ -37,6 +40,21 @@
 
       letter-spacing: -1.5px;
       color: #ef4444;
+
+      white-space: pre-line;
+
+      strong {
+        display: block;
+
+        margin: 16px;
+        padding: 15px;
+
+        font-size: 16px;
+        font-weight: normal;
+        color: #334155;
+
+        background-color: #e2e8f0;
+      }
     }
 
     &name {
