--- a/packages/core/polyfill/runner.ejs
+++ b/packages/core/polyfill/runner.ejs
@@ -183,7 +183,7 @@
 
         // Show compile errors in error-overlay in $Debug
         if (window.__IMA_HMR && window.$Debug) {
-          window.__IMA_HMR.emit('error', { error: error, type: 'compile' });
+          window.__IMA_HMR.emit('error', { error: error });
         }
       },
     },
