✏️  docs: @ima/cli documentation update

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -29,6 +29,7 @@
   --ifm-code-border-radius: 3px;
   --ifm-container-width: 860px;
   --ifm-container-width-xl: 1080px;
+  --ifm-tabs-padding-vertical: 0.5rem;
   --ifm-color-secondary-contrast-background: #f1f3f5;
   --ifm-menu-link-padding-horizontal: 0.75rem;
   --ifm-menu-link-padding-vertical: 0.3rem;
