docs: ✏️ Autogenerated API docs improvements

--- a/website/scripts/partials/main.hbs
+++ b/website/scripts/partials/main.hbs
@@ -1,13 +1,5 @@
 ---
-{{#orphans ~}}
-  {{#if imaMenuCategory}}
-    category: "{{{imaMenuCategory}}}"
-  {{/if~}}
-  {{#if imaMenuName}}
-    title: "API -
-    {{{imaMenuName}}}" menuTitle: "{{{imaMenuName}}}"
-  {{/if~}}
-{{/orphans~}}
+sidebar_label: "{{{meta.sidebarLabel}}}"
 ---
 
 import { GithubLink } from '@site/src/components/GithubLink';
