docs: ✏️ Additional api generator improvements

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -34,6 +34,7 @@
   --ifm-menu-link-padding-horizontal: 0.75rem;
   --ifm-menu-link-padding-vertical: 0.3rem;
   --ifm-h4-font-size: 1.15rem;
+  --ifm-hr-background-color: #e9ecef;
   --ifm-navbar-height: 4rem;
 }
 
