✏️  docs: HP update

--- a/website/scripts/partials/main.hbs
+++ b/website/scripts/partials/main.hbs
@@ -2,7 +2,7 @@
 sidebar_label: "{{{meta.sidebarLabel}}}"
 ---
 
-import { GithubLink } from '@site/src/components/githubLink/GithubLink';
+import { GithubLink } from '@site/src/components';
 
 {{>main-index~}}
 {{>all-docs~}}
