--- a/packages/core/polyfill/runner.ejs
+++ b/packages/core/polyfill/runner.ejs
@@ -1,10 +1,32 @@
-((root) => {
+(function (root) {
+  /**
+   * Simple es5-compatible Object.assign polyfill.
+   * Credits goes to MDN.
+   */
+  function assign(target) {
+    var to = Object(target);
+
+    for (var index = 1; index < arguments.length; index++) {
+      var nextSource = arguments[index];
+
+      if (nextSource != null) {
+        for (var nextKey in nextSource) {
+          if (Object.prototype.hasOwnProperty.call(nextSource, nextKey)) {
+            to[nextKey] = nextSource[nextKey];
+          }
+        }
+      }
+    }
+
+    return to;
+  }
+
   /**
    * $IMA.Runner can be completely overridden, so we have to shallow merge
    * potential existing object with the default runner.
    */
   root.$IMA = root.$IMA || {};
-  root.$IMA.Runner = Object.assign(
+  root.$IMA.Runner = assign(
     {
       isEsVersion: false,
       source: JSON.parse('#{$Source}'),
@@ -27,7 +49,7 @@
        * It also takes care of testing the browser environment and determining
        * what version should be loaded.
        */
-      initScripts: () => {
+      initScripts: function () {
         var runner = root.$IMA.Runner;
         var scriptsRoot = root.document.getElementById('scripts');
 
@@ -64,13 +86,13 @@
 
             scriptEl.src = src;
 
-            Object.keys(options).forEach((attr) => {
+            Object.keys(options).forEach(function (attr) {
               if (attr === 'fallback' && options.fallback) {
-                scriptEl.onerror = () => {
+                scriptEl.onerror = function () {
                   var optionsCopy = {};
 
                   // Create options copy and skip fallback
-                  Object.keys(options).forEach((attr) => {
+                  Object.keys(options).forEach(function (attr) {
                     if (attr !== 'fallback') {
                       optionsCopy[attr] = options[attr];
                     }
@@ -83,7 +105,7 @@
               }
             });
 
-            scriptEl.onload = () => {
+            scriptEl.onload = function () {
               runner.onLoad(source);
             };
           }
@@ -105,6 +127,7 @@
         } else if (runner.testSource.scripts.every(testScript)) {
           runner.scripts = runner.source.scripts;
         } else {
+          // Don't create scripts and execute runtime on unsupported environments.
           return runner.onUnsupported();
         }
 
@@ -120,23 +143,19 @@
        * {runtime} placeholders are replaced with the actual runtime code
        * at the build time.
        */
-      run: () => {
+      run: function () {
         var runner = root.$IMA.Runner;
 
         try {
           /**
-           * Run es version of the runtime, in case there are any es scripts sources.
-           * Otherwise fallback to the legacy version of the runner.
+           * We need to wrap both runtime codes in a string and execute the function
+           * since the code can contain some legacy incompatible syntax, which would
+           * break the legacy (not supported) JS interpreters.
            */
           if (runner.isEsVersion) {
-            /**
-             * We need to wrap esRuntime code in a string and execute the function
-             * since the code can contain some legacy incompatible syntax, which would
-             * break the legacy JS interpreters.
-             */
             new Function('<%- esRuntime %>')();
           } else {
-            <%- runtime %>
+            new Function('<%- runtime %>')();
           }
         } catch (error) {
           runner.onError(error);
@@ -148,7 +167,7 @@
        * in the scripts array, since only when all of the scripts are
        * loaded, the run callback is called.
        */
-      onLoad: (script) => {
+      onLoad: function (script) {
         var runner = root.$IMA.Runner;
 
         runner.loadedScripts.push(
@@ -164,7 +183,7 @@
        * Optional onError handler. It is triggered in case the runtime
        * code fails to run the application.
        */
-      onError: (error) => {
+      onError: function (error) {
         console.error('IMA Runner ERROR:', error);
 
         // Show compile errors in error-overlay in $Debug
@@ -178,7 +197,7 @@
        * for es and legacy version fails, which means that the APP runtime
        * code is never executed.
        */
-      onUnsupported: () => {
+      onUnsupported: function() {
         console.warn('Unsupported environment, the app runtime was not executed.');
       },
     },
