--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -24,7 +24,7 @@
   --ifm-font-color-base: #343a40;
   --ifm-font-color-secondary: #495057;
   --ifm-menu-color: var(--ifm-font-color-secondary);
-  --docusaurus-highlighted-code-line-bg: var(--ifm-color-success-lightest);
+  --docusaurus-highlighted-code-line-bg: #e9ecef;
   --ifm-font-size-base: 100%;
   --ifm-code-font-size: 90%;
   --ifm-code-border-radius: 3px;
