--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -142,6 +142,7 @@ code:not([class])::after {
 
 code {
   border: none;
+  border-radius: 0;
   padding: 0;
 
   font-weight: 600;
@@ -150,6 +151,10 @@ code {
   color: var(--ifm-color-primary-dark);
 
   background: none;
+}
+
+a code {
+  text-decoration: underline;
 }
 
 .theme-doc-sidebar-menu.menu__list {
