--- a/packages/create-ima-app/template/server/template/spa.ejs
+++ b/packages/create-ima-app/template/server/template/spa.ejs
@@ -1,14 +1,15 @@
-<!doctype html>
 <html>
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-  <title>IMA.js - SPAr</title>
+  <title>IMA.js - SPA</title>
+  #{$Styles}
 </head>
 
 <body>
-  <h1>SPA template todo</h1>
+  <div id="page"></div>
+  #{$Scripts}
 </body>
 
 </html>
