Added basic logging of error params

--- a/packages/error-overlay/src/app.less
+++ b/packages/error-overlay/src/app.less
@@ -27,3 +27,4 @@
 @import "./components/frame/prismjs.less";
 @import "./components/icon/icon.less";
 @import "./components/close/close.less";
+@import "./components/errorParams/errorParams.less";
