--- a/packages/error-overlay/src/components/errorParams/errorParams.less
+++ b/packages/error-overlay/src/components/errorParams/errorParams.less
@@ -3,28 +3,41 @@
   border-radius: 5px;
   overflow: hidden;
 
-  font-size: 13px;
-  line-height: 20px;
-
   color: #f8fafc;
 
   background-color: #334155;
 
   box-shadow: rgba(51, 65, 85, 0.5) 0 10px 15px -3px, rgba(51, 65, 85, 0.5) 0 4px 6px -4px;
 
-  pre {
-    margin: 1rem;
-  }
-
   &__ {
     &title {
-      margin: 1rem;
+      display: flex;
+
+      border-bottom: 1px solid #475569;
+      padding: 12px 16px;
+
+      justify-content: space-between;
+
+      align-items: center;
 
       font-family: var(--ima-font-mono);
       font-size: 14px;
 
       line-height: 20px;
-      line-height: 24px;
+
+      box-shadow: rgba(30, 41, 59, 0.25) 0 8px 12px;
+    }
+
+    &size {
+      color: #64748b;
+    }
+
+    &json-tree {
+      padding: 10px;
+
+      font-family: var(--ima-font-mono);
+      font-size: 13px;
+      line-height: 19px;
     }
   }
 }
