Added TS template to create-ima-app

--- a/packages/create-ima-app/template/js/app/component/card/card.less
+++ b/packages/create-ima-app/template/js/app/component/card/card.less
@@ -25,14 +25,14 @@
     border-bottom-width: 2px;
     padding-bottom: 0.75rem;
 
-    color: @color-red;
+    color: @color-primary;
 
     h3 {
       margin: 0;
     }
 
     &:active {
-      color: @color-red;
+      color: @color-primary;
     }
   }
 
