--- a/packages/create-ima-app/template/js/app/less/app.less
+++ b/packages/create-ima-app/template/js/app/less/app.less
@@ -26,7 +26,7 @@ body {
 }
 
 a {
-  border-bottom: 1px solid @color-red;
+  border-bottom: 1px solid @color-primary;
 
   font-weight: 700;
   color: @color-dark;
