--- a/packages/create-ima-app/template/js/app/less/globals.less
+++ b/packages/create-ima-app/template/js/app/less/globals.less
@@ -5,6 +5,6 @@
 * it perfect place to define custom LESS variables, mixins etc.
 */
 
-@color-red: #fc0008;
+@color-primary: #fc0008;
 @color-dark: #1f2937;
 @color-light: #e5e7eb;
