--- a/packages/create-ima-app/template/app/public/spa.html
+++ b/packages/create-ima-app/template/app/public/spa.html
@@ -5,6 +5,7 @@
     <meta httpEquiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     #{$Styles}
+    #{$MetaTags}
 
     <title></title>
 </head>
