--- a/packages/create-ima-app/template/server/template/spa.ejs
+++ b/packages/create-ima-app/template/server/template/spa.ejs
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <title>IMA.js - SPA</title>
   #{$Styles}
+  #{$MetaTags}
 </head>
 
 <body>
