--- a/packages/devtools/src/components/atom/modal/modal.module.less
+++ b/packages/devtools/src/components/atom/modal/modal.module.less
@@ -1,4 +1,4 @@
-@import "../../../assets/less/animations.module.less";
+@import url("../../../assets/less/animations.module.less");
 
 .wrapper {
   position: absolute;
