--- a/packages/error-overlay/src/app.less
+++ b/packages/error-overlay/src/app.less
@@ -19,12 +19,12 @@
 }
 
 /* These styles are injected to the shadow dom of ima-error-overlay */
-@import url("./components/overlay/overlay.less");
-@import url("./components/header/header.less");
-@import url("./components/runtimeError/runtimeError.less");
-@import url("./components/frame/frame.less");
-@import url("./components/frame/frameHeader.less");
-@import url("./components/frame/prismjs.less");
-@import url("./components/icon/icon.less");
-@import url("./components/close/close.less");
-@import url("./components/errorParams/errorParams.less");
+@import "./components/overlay/overlay.less";
+@import "./components/header/header.less";
+@import "./components/runtimeError/runtimeError.less";
+@import "./components/frame/frame.less";
+@import "./components/frame/frameHeader.less";
+@import "./components/frame/prismjs.less";
+@import "./components/icon/icon.less";
+@import "./components/close/close.less";
+@import "./components/errorParams/errorParams.less";
