Added ability to extend/customize content interpolation using response.contentVariables

--- a/packages/core/polyfill/runner.ejs
+++ b/packages/core/polyfill/runner.ejs
@@ -29,7 +29,7 @@
   root.$IMA.Runner = assign(
     {
       isEsVersion: false,
-      source: JSON.parse('#{$Source}'),
+      source: JSON.parse('#{source}'),
       scripts: [],
       loadedScripts: [],
       testSource: {
